<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DroidCafeInput</string>
    <string name="action_settings">Configuración</string>
    <string name="droid_desserts">Droid Desserts</string>
    //descripciones
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>

    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    //para toast method
    <string name="donut_order_message">You ordered a donut.</string>

    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    //labels y enter texts del activity_order
    <string name="order_description">Pedido:</string>
    <string name="name">Nombre</string>

    <string name="enter_adress_hint">Introduce dirección</string>
    <string name="enter_your_name">Introduce tu nombre</string>
    <string name="enter_phone">Introduce tlfno.</string>
    //para las notas
    <string name="note">Notas</string>
    <string name="note_text">Introduce nota</string>
    <string name="enter_note_hint">Intro nota</string>

    //para los radio button
    <string name="delivery_method_text">Elige el método de entrega</string>
    <string name="pick_up">Para llevar</string>
    <string name="next_day_text">Siguiente dia</string>
    <string name="same_day_text">Mismo dia</string>
    <string name="adress_label_text">Direccion</string>
    <string name="phone_label">Tlfno.</string>



    //para el spinner

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    //para el menu toolbar

    <string name="action_contact">Contacto</string>
    <string name="action_order">Pedido</string>
    <string name="action_status">Estado</string>
    <string name="action_favorites">Favoritos</string>

    //mensajes para cada opcion menu clicada

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="order_textview">Pedido</string>


</resources>
